--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>9.2.2.v20140723</version>
+				<configuration>
+					<scanIntervalSeconds>10</scanIntervalSeconds>
+
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
