--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 # spring.devtools.restart.additional-paths=src/
+# Informations sur la BDD à exploiter
+# ajouter "?serverTimezone=GMT" à l'url est obligatoire pour MySQL 5
+spring.datasource.url=jdbc:mysql://localhost:3306/marycrea?serverTimezone=GMT
+spring.datasource.username=mary
+spring.datasource.password=Mary.321
+# Autoriser l'affichage des requêtes SQL faites par Hibernate
+spring.jpa.show-sql=true
+# Gérer Hibernate
+spring.jpa.hibernate.ddl-auto=update
+# Sélectionner un "dialecte" permet à Hibernate de générer du SQL adapté à la version choisie
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
